# betbot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
bots/: base.py
bots/crypto/: bot.py  parser.py  strategy.py
bots/weather/: arbitrage.py  bot.py  parser.py  stability.py  strategy.py
config/: settings.yaml
core/: datetime_display.py  env_utils.py  models.py
core/crypto/: price_client.py
core/polymarket/: client.py  paper_client.py
core/portfolio/: logger.py  tracker.py
core/risk/: manager.py
core/weather/: client.py  climatology.py
data/: weather_climatology_cache.json  weather_forecast_cache.json  weather_paper_portfolio.json
deploy/: README.md  betbot-crypto.service  betbot-status-web.service  betbot-weather.service  manage.sh  nginx-status-web.conf.example  setup_ec2.sh  status_dashboard.py
scripts/: run.py
